--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "description": "The Final step before you complete",
   "version": "1.0",
   "manifest_version": 3,
+  "icons": {
+    "16": "icon-16.png",
+    "32": "icon-32.png",
+    "48": "icon-48.png",
+    "128": "icon-128.png"
+  },
   "permissions": [
     "storage",
     "sidePanel"
