--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
   "version": "1.0",
   "manifest_version": 3,
   "icons": {
-    "16": "icon-16.png",
-    "32": "icon-32.png",
-    "48": "icon-48.png",
-    "128": "icon-128.png"
+    "16": "assets/icon-16.png",
+    "32": "assets/icon-32.png",
+    "48": "assets/icon-48.png",
+    "128": "assets/icon-128.png"
   },
   "permissions": [
     "storage",
